--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,10 @@
 @import "./Breakpoints.scss";
 
+body,
+html {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   padding: 0px;
